Added no photo scenes message

--- a/parkpic.us/app/templates/output.html
+++ b/parkpic.us/app/templates/output.html
@@ -94,7 +94,7 @@
     <!-- Photos -->
     <div id ="photos">
       <h3 id="exploremsg" class ="text-muted" style="text-align: center;">
-        Click a scene marker to explore.
+        {{photomsg}}
       </h3>
       <div id="topphotos">
         <div id="scrollleft" class="photoscroll noselect">&#9668;</div>
